proyectos/10/src/jackGrammarParser.py
# Generated from jackGrammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class jackGrammarParser ( Parser ):

    grammarFileName = "jackGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'static'", "'field'", 
                     "','", "';'", "'int'", "'char'", "'boolean'", "'constructor'", 
                     "'function'", "'method'", "'void'", "'('", "')'", "'var'", 
                     "'let'", "'['", "']'", "'='", "'if'", "'else'", "'while'", 
                     "'do'", "'return'", "'.'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'<'", "'>'", "'~'", "'true'", "'false'", 
                     "'null'", "'this'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGERCONSTANT", "STRINGCONSTANT", 
                      "IDENTIFIER", "WS", "MULTILINE_COMMENTS", "INLINE_COMMENTS" ]

    RULE_classN = 0
    RULE_classVarDecN = 1
    RULE_typeN = 2
    RULE_subroutineDecN = 3
    RULE_parameterListN = 4
    RULE_subroutineBodyN = 5
    RULE_varDecN = 6
    RULE_classNameN = 7
    RULE_subroutineNameN = 8
    RULE_varNameN = 9
    RULE_statementsN = 10
    RULE_statementN = 11
    RULE_letStatementN = 12
    RULE_ifStatementN = 13
    RULE_whileStatementN = 14
    RULE_doStatementN = 15
    RULE_returnStatementN = 16
    RULE_expressionN = 17
    RULE_termN = 18
    RULE_subroutineCallN = 19
    RULE_expressionListN = 20
    RULE_opN = 21
    RULE_unaryOpN = 22
    RULE_keywordConstantN = 23

    ruleNames =  [ "classN", "classVarDecN", "typeN", "subroutineDecN", 
                   "parameterListN", "subroutineBodyN", "varDecN", "classNameN", 
                   "subroutineNameN", "varNameN", "statementsN", "statementN", 
                   "letStatementN", "ifStatementN", "whileStatementN", "doStatementN", 
                   "returnStatementN", "expressionN", "termN", "subroutineCallN", 
                   "expressionListN", "opN", "unaryOpN", "keywordConstantN" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    INTEGERCONSTANT=41
    STRINGCONSTANT=42
    IDENTIFIER=43
    WS=44
    MULTILINE_COMMENTS=45
    INLINE_COMMENTS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ClassNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classNameN(self):
            return self.getTypedRuleContext(jackGrammarParser.ClassNameNContext,0)


        def classVarDecN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.ClassVarDecNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.ClassVarDecNContext,i)


        def subroutineDecN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.SubroutineDecNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.SubroutineDecNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_classN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassN" ):
                listener.enterClassN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassN" ):
                listener.exitClassN(self)




    def classN(self):

        localctx = jackGrammarParser.ClassNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(jackGrammarParser.T__0)
            self.state = 49
            self.classNameN()
            self.state = 50
            self.match(jackGrammarParser.T__1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__3 or _la==jackGrammarParser.T__4:
                self.state = 51
                self.classVarDecN()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__10) | (1 << jackGrammarParser.T__11) | (1 << jackGrammarParser.T__12))) != 0):
                self.state = 57
                self.subroutineDecN()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassVarDecNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeN(self):
            return self.getTypedRuleContext(jackGrammarParser.TypeNContext,0)


        def varNameN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_classVarDecN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassVarDecN" ):
                listener.enterClassVarDecN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassVarDecN" ):
                listener.exitClassVarDecN(self)




    def classVarDecN(self):

        localctx = jackGrammarParser.ClassVarDecNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classVarDecN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==jackGrammarParser.T__3 or _la==jackGrammarParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 66
            self.typeN()
            self.state = 67
            self.varNameN()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__5:
                self.state = 68
                self.match(jackGrammarParser.T__5)
                self.state = 69
                self.varNameN()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classNameN(self):
            return self.getTypedRuleContext(jackGrammarParser.ClassNameNContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_typeN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeN" ):
                listener.enterTypeN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeN" ):
                listener.exitTypeN(self)




    def typeN(self):

        localctx = jackGrammarParser.TypeNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeN)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(jackGrammarParser.T__7)
                pass
            elif token in [jackGrammarParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(jackGrammarParser.T__8)
                pass
            elif token in [jackGrammarParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(jackGrammarParser.T__9)
                pass
            elif token in [jackGrammarParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.classNameN()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineDecNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineNameN(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineNameNContext,0)


        def parameterListN(self):
            return self.getTypedRuleContext(jackGrammarParser.ParameterListNContext,0)


        def subroutineBodyN(self):
            return self.getTypedRuleContext(jackGrammarParser.SubroutineBodyNContext,0)


        def typeN(self):
            return self.getTypedRuleContext(jackGrammarParser.TypeNContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineDecN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineDecN" ):
                listener.enterSubroutineDecN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineDecN" ):
                listener.exitSubroutineDecN(self)




    def subroutineDecN(self):

        localctx = jackGrammarParser.SubroutineDecNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subroutineDecN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__10) | (1 << jackGrammarParser.T__11) | (1 << jackGrammarParser.T__12))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__13]:
                self.state = 84
                self.match(jackGrammarParser.T__13)
                pass
            elif token in [jackGrammarParser.T__7, jackGrammarParser.T__8, jackGrammarParser.T__9, jackGrammarParser.IDENTIFIER]:
                self.state = 85
                self.typeN()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 88
            self.subroutineNameN()
            self.state = 89
            self.match(jackGrammarParser.T__14)
            self.state = 90
            self.parameterListN()
            self.state = 91
            self.match(jackGrammarParser.T__15)
            self.state = 92
            self.subroutineBodyN()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.TypeNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.TypeNContext,i)


        def varNameN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_parameterListN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterListN" ):
                listener.enterParameterListN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterListN" ):
                listener.exitParameterListN(self)




    def parameterListN(self):

        localctx = jackGrammarParser.ParameterListNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterListN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__7) | (1 << jackGrammarParser.T__8) | (1 << jackGrammarParser.T__9) | (1 << jackGrammarParser.IDENTIFIER))) != 0):
                self.state = 94
                self.typeN()
                self.state = 95
                self.varNameN()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==jackGrammarParser.T__5:
                    self.state = 97
                    self.match(jackGrammarParser.T__5)
                    self.state = 98
                    self.typeN()
                    self.state = 99
                    self.varNameN()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineBodyNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementsN(self):
            return self.getTypedRuleContext(jackGrammarParser.StatementsNContext,0)


        def varDecN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarDecNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarDecNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineBodyN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineBodyN" ):
                listener.enterSubroutineBodyN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineBodyN" ):
                listener.exitSubroutineBodyN(self)




    def subroutineBodyN(self):

        localctx = jackGrammarParser.SubroutineBodyNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subroutineBodyN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(jackGrammarParser.T__1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__16:
                self.state = 109
                self.varDecN()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.statementsN()
            self.state = 116
            self.match(jackGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeN(self):
            return self.getTypedRuleContext(jackGrammarParser.TypeNContext,0)


        def varNameN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.VarNameNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.VarNameNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_varDecN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecN" ):
                listener.enterVarDecN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecN" ):
                listener.exitVarDecN(self)




    def varDecN(self):

        localctx = jackGrammarParser.VarDecNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDecN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(jackGrammarParser.T__16)
            self.state = 119
            self.typeN()
            self.state = 120
            self.varNameN()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jackGrammarParser.T__5:
                self.state = 121
                self.match(jackGrammarParser.T__5)
                self.state = 122
                self.varNameN()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(jackGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_classNameN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassNameN" ):
                listener.enterClassNameN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassNameN" ):
                listener.exitClassNameN(self)




    def classNameN(self):

        localctx = jackGrammarParser.ClassNameNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classNameN)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(jackGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineNameNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(jackGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_subroutineNameN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineNameN" ):
                listener.enterSubroutineNameN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineNameN" ):
                listener.exitSubroutineNameN(self)




    def subroutineNameN(self):

        localctx = jackGrammarParser.SubroutineNameNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subroutineNameN)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(jackGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarNameNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(jackGrammarParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return jackGrammarParser.RULE_varNameN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarNameN" ):
                listener.enterVarNameN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarNameN" ):
                listener.exitVarNameN(self)




    def varNameN(self):

        localctx = jackGrammarParser.VarNameNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varNameN)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(jackGrammarParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.StatementNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.StatementNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_statementsN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementsN" ):
                listener.enterStatementsN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementsN" ):
                listener.exitStatementsN(self)




    def statementsN(self):

        localctx = jackGrammarParser.StatementsNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statementsN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jackGrammarParser.T__17) | (1 << jackGrammarParser.T__21) | (1 << jackGrammarParser.T__23) | (1 << jackGrammarParser.T__24) | (1 << jackGrammarParser.T__25))) != 0):
                self.state = 136
                self.statementN()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatementN(self):
            return self.getTypedRuleContext(jackGrammarParser.LetStatementNContext,0)


        def ifStatementN(self):
            return self.getTypedRuleContext(jackGrammarParser.IfStatementNContext,0)


        def whileStatementN(self):
            return self.getTypedRuleContext(jackGrammarParser.WhileStatementNContext,0)


        def doStatementN(self):
            return self.getTypedRuleContext(jackGrammarParser.DoStatementNContext,0)


        def returnStatementN(self):
            return self.getTypedRuleContext(jackGrammarParser.ReturnStatementNContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_statementN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementN" ):
                listener.enterStatementN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementN" ):
                listener.exitStatementN(self)




    def statementN(self):

        localctx = jackGrammarParser.StatementNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statementN)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jackGrammarParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.letStatementN()
                pass
            elif token in [jackGrammarParser.T__21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.ifStatementN()
                pass
            elif token in [jackGrammarParser.T__23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.whileStatementN()
                pass
            elif token in [jackGrammarParser.T__24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.doStatementN()
                pass
            elif token in [jackGrammarParser.T__25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.returnStatementN()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varNameN(self):
            return self.getTypedRuleContext(jackGrammarParser.VarNameNContext,0)


        def expressionN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.ExpressionNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.ExpressionNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_letStatementN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatementN" ):
                listener.enterLetStatementN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatementN" ):
                listener.exitLetStatementN(self)




    def letStatementN(self):

        localctx = jackGrammarParser.LetStatementNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_letStatementN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(jackGrammarParser.T__17)
            self.state = 150
            self.varNameN()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jackGrammarParser.T__18:
                self.state = 151
                self.match(jackGrammarParser.T__18)
                self.state = 152
                self.expressionN()
                self.state = 153
                self.match(jackGrammarParser.T__19)


            self.state = 157
            self.match(jackGrammarParser.T__20)
            self.state = 158
            self.expressionN()
            self.state = 159
            self.match(jackGrammarParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionN(self):
            return self.getTypedRuleContext(jackGrammarParser.ExpressionNContext,0)


        def statementsN(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jackGrammarParser.StatementsNContext)
            else:
                return self.getTypedRuleContext(jackGrammarParser.StatementsNContext,i)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_ifStatementN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatementN" ):
                listener.enterIfStatementN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatementN" ):
                listener.exitIfStatementN(self)




    def ifStatementN(self):

        localctx = jackGrammarParser.IfStatementNContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStatementN)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(jackGrammarParser.T__21)
            self.state = 162
            self.match(jackGrammarParser.T__14)
            self.state = 163
            self.expressionN()
            self.state = 164
            self.match(jackGrammarParser.T__15)
            self.state = 165
            self.match(jackGrammarParser.T__1)
            self.state = 166
            self.statementsN()
            self.state = 167
            self.match(jackGrammarParser.T__2)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jackGrammarParser.T__22:
                self.state = 168
                self.match(jackGrammarParser.T__22)
                self.state = 169
                self.match(jackGrammarParser.T__1)
                self.state = 170
                self.statementsN()
                self.state = 171
                self.match(jackGrammarParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementNContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionN(self):
            return self.getTypedRuleContext(jackGrammarParser.ExpressionNContext,0)


        def statementsN(self):
            return self.getTypedRuleContext(jackGrammarParser.StatementsNContext,0)


        def getRuleIndex(self):
            return jackGrammarParser.RULE_whileStatementN

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatementN" ):
                listener.enterWhileStatementN(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatementN" ):
                listener.exitWhileStatementN(self)




    def whileStatementN(self):
